# cavaland

./: .gitignore  CMakeLists.txt  CavaService.cpp  CavaService.hpp  CavaWindow.cpp  CavaWindow.hpp  CavalandApp.cpp  CavalandApp.hpp  ConfigManager.cpp  ConfigManager.hpp  LICENSE  Makefile  Readme.md  Renderer.cpp  Renderer.hpp  Shader.hpp  cava_config  compile_commands.json  constants.hpp  example.cfg  fragment.glsl  main.cpp  vertex.glsl
renderers/: IRenderer.hpp
renderers/frag/: FragRenderer.cpp  FragRenderer.hpp
renderers/horizontal_bars/: HorizontalBarsRenderer.cpp  HorizontalBarsRenderer.hpp
shaders/bars/: fragment.glsl  x_gradient.glsl  y_gradient.glsl
shaders/frag/: vertex.glsl
shaders/lines/: wave.frag  wave.glsl
